cc_binary(
    name = "klungsyzer",
    srcs = [
        "main.cc",
    ],
    data = ["//static:corpus_data"],
    deps = [
        "//core/search",
        "//core/unicode",
        "@boost//:locale",
    ],
)

cc_library(
    name = "keyset_config",
    srcs = ["keyset_config.cc"],
    hdrs = ["keyset_config.h"],
    visibility = [
        "//core/search:__pkg__",
    ],
    deps = [
        "types",
        "//core/unicode",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "keyset_config_transformator",
    hdrs = ["keyset_config_transformator.h"],
    visibility = [
        "//core/search:__pkg__",
    ],
    deps = [
        "keyset_config",
        "//core/unicode",
    ],
)

cc_library(
    name = "types",
    srcs = [],
    hdrs = ["types.h"],
    visibility = [
        "//visibility:public",
    ],
)
