cc_library(
    name = "utils",
    srcs = [
        "utils.hpp",
    ],
    deps = [
        "@nlohmann_json//:json",
    ],
)

cc_binary(
    name = "v5",
    srcs = [
        "v5.cc",
    ],
    data = ["//static:corpus_data"],
    deps = [
        "utils",
        "@nlohmann_json//:json",
    ],
)

cc_binary(
    name = "parse_shai",
    srcs = [
        "parse_shai.cc",
    ],
    data = ["//static:corpus_data"],
    deps = [
        "utils",
        "@nlohmann_json//:json",
    ],
)
