cc_binary(
    name = "klungsyzer",
    srcs = [
        "layout.h",
        "main.cc",
    ],
)

cc_library(
    name = "corpus_stats",
    srcs = ["corpus_stats.cc"],
    hdrs = ["corpus_stats.h"],
    visibility = ["//src/search:__pkg__"],
    deps = [
        "raw_corpus_stats",
        "types",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "raw_corpus_stats",
    srcs = ["raw_corpus_stats.cc"],
    hdrs = ["raw_corpus_stats.h"],
)

cc_library(
    name = "types",
    srcs = [],
    hdrs = ["types.h"],
    visibility = ["//visibility:public"],
)
