cc_binary(
    name = "klungsyzer",
    srcs = [
        "main.cc",
    ],
    data = ["//static:corpus_data"],
    deps = [
        "//src/search",
    ],
)

cc_library(
    name = "corpus_stats",
    srcs = ["corpus_stats.cc"],
    hdrs = ["corpus_stats.h"],
    visibility = ["//src/search:__pkg__"],
    deps = [
        "raw_corpus_stats",
        "types",
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "corpus_stats_test",
    size = "small",
    srcs = ["corpus_stats_test.cc"],
    deps = [
        "corpus_stats",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "raw_corpus_stats",
    srcs = ["raw_corpus_stats.cc"],
    hdrs = ["raw_corpus_stats.h"],
    deps = [
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "raw_corpus_stats_test",
    size = "small",
    srcs = ["raw_corpus_stats_test.cc"],
    deps = [
        "raw_corpus_stats",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "types",
    srcs = [],
    hdrs = ["types.h"],
    visibility = ["//visibility:public"],
)
