cc_library(
    name = "search_state",
    srcs = ["search_state.cc"],
    hdrs = ["search_state.h"],
    deps = [
        "//core:types",
        "@boost//:dynamic_bitset",
    ],
)

cc_library(
    name = "search",
    srcs = ["search.cc"],
    hdrs = ["search.h"],
    visibility = ["//core:__pkg__"],
    deps = [
        "search_state",
        "//core:keyset_config",
        "//core:keyset_config_transformator",
        "//core/data_structure:best_pair_set",
        "//core/stats:fast_read_corpus_stats",
    ],
)

cc_test(
    name = "search_state_test",
    size = "small",
    srcs = ["search_state_test.cc"],
    deps = [
        "search_state",
        "@googletest//:gtest_main",
    ],
)
