cc_library(
    name = "best_pair_set",
    srcs = [],
    hdrs = ["best_pair_set.h"],
    visibility = ["//src/search:__pkg__"],
)

cc_test(
    name = "best_pair_set_test",
    size = "small",
    srcs = ["best_pair_set_test.cc"],
    deps = [
        "best_pair_set",
        "@googletest//:gtest_main",
    ],
)
